Closed Bug 421992 Opened 16 years ago Closed 16 years ago

Fix compile warnings in nsPluginHostImpl.cpp

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Linux
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

Details

Attachments

(1 file)

A couple of warnings from bug 420285 I think.  The second probably
crashes with PR_LOG enabled.

nsPluginHostImpl.cpp: In member function 'nsresult nsPluginTag::EnsureMembersAreUTF8()':
nsPluginHostImpl.cpp:996: warning: comparison between signed and unsigned integer expressions
nsPluginHostImpl.cpp: In member function 'nsresult nsPluginHostImpl::ReadPluginInfo()':
nsPluginHostImpl.cpp:5871: warning: cannot pass objects of non-POD type 'class nsCString' through '...'; call will abort at runtime
Attached patch Patch rev. 1Splinter Review
Attachment #308532 - Flags: superreview?(jst)
Attachment #308532 - Flags: review?(jst)
Attachment #308532 - Flags: superreview?(jst)
Attachment #308532 - Flags: superreview+
Attachment #308532 - Flags: review?(jst)
Attachment #308532 - Flags: review+
Attachment #308532 - Flags: approval1.9+
Fix checked in, thanks for the fix!
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: