Landing fix for compiler warning bug 421992. Patch by mats.palmgren@bredband.net, r+sr+a=jst@mozilla.org